Allow people to delete pending runs that have not uploaded yet

--- a/ForrestCruiseApp/Base.lproj/Main.storyboard
+++ b/ForrestCruiseApp/Base.lproj/Main.storyboard
@@ -219,10 +219,10 @@
             </objects>
             <point key="canvasLocation" x="-144" y="2468"/>
         </scene>
-        <!--Runs-->
+        <!--Runs View Controller-->
         <scene sceneID="3AA-eE-dMF">
             <objects>
-                <tableViewController id="UvB-T8-LtY" userLabel="Runs" customClass="RunsViewController" customModule="ForrestCruiseApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="UvB-T8-LtY" customClass="RunsViewController" customModule="ForrestCruiseApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="28" sectionFooterHeight="28" id="2X4-oM-phf">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -285,10 +285,10 @@
             </objects>
             <point key="canvasLocation" x="1422" y="2468"/>
         </scene>
-        <!--Item-->
+        <!--Runs-->
         <scene sceneID="Y1y-Nm-tyd">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ybh-X5-IzH" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ybh-X5-IzH" userLabel="Runs" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Jd9-g6-OEy"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Oo3-ka-dQ1">
